examples/bad/Types4.tn
{
  proc p(int x, bool b) {
    print b;
  };
  :
  p(6, 7);
}

